fix broken vertical spacing from last commit

--- a/src/App.css
+++ b/src/App.css
@@ -32,8 +32,8 @@
 }
 
 .copyright {
-  margin-top: 12px;
-  margin-bottom: 32px;
+  padding-top: 12px;
+  padding-bottom: 32px;
   color: #f8f8f8;
 }
 
